--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "borderly",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "",
   "proxy": "http://localhost:5000",
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
+    "astroturf": "^0.10.5",
     "axios": "^0.19.2",
     "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
