--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "proxy": "http://localhost:5000",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open",
+    "client": "webpack-dev-server --open",
     "build": "webpack",
     "heroku-postbuild": "npm run build",
-    "app": "python app.py"
+    "server": "python app.py"
   },
   "author": "",
   "license": "ISC",
